fixing style landing, tentang kami. dan produk section. [Now only phone!]

--- a/public/index.html
+++ b/public/index.html
@@ -52,16 +52,16 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tentang Kami</a>
+              <a class="nav-link" href="#tentang-kami">Tentang Kami</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Produk</a>
+              <a class="nav-link" href="#produk">Produk</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Testimoni</a>
+              <a class="nav-link" href="#testimoni">Testimoni</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Hubungi Kami</a>
+              <a class="nav-link" href="#hubungi-kami">Hubungi Kami</a>
             </li>
           </ul>
         </div>
@@ -71,20 +71,16 @@
 
     <!-- ? Landing Section -->
     <section id="landing">
-      <div
-        class="
-          showcase
-          d-flex
-          flex-column
-          justify-content-center
-          align-items-center
-        "
-      >
-        <h1>Assalamualaikum Wr. Wb</h1>
+      <div class="showcase">
+        <p class="salam">Assalamualaikum Wr. Wb.</p>
         <h1><strong>Hendra Herman</strong> Aqiqah & Qurban.</h1>
         <p class="lead">
-          Kami menyediakan berbagai macam kambing qurban dengan perawatan yang
-          baik dan berkualitas.
+          Kami menyediakan <strong>kambing</strong> yang cocok untuk
+          <strong>Qurban</strong> maupun <strong>Aqiqah</strong> dengan kualitas
+          terbaik.
+        </p>
+        <p>
+          <strong>"Insyaallah Amanah!"</strong>
         </p>
       </div>
     </section>
@@ -92,18 +88,10 @@
 
     <!-- ? Tentang Kami Section -->
     <section id="tentang-kami">
-      <h2 class="text-center">Tentang Kami</h2>
-      <div
-        class="
-          d-flex
-          flex-column
-          justify-content-center
-          align-items-center
-          tentang-kami-flex
-        "
-      >
+      <div class="showcase">
+        <h2>Tentang Kami</h2>
         <div class="section-text">
-          <h3 class="text-center">The Best Goat Seller in Palembang City</h3>
+          <h3 class="text-center">"The Best Goat Seller in Palembang City"</h3>
           <p class="lead">
             Sudah menjadi kepercayaan konsumen
             <strong>sejak tahun 1996</strong>, berlokasi di Sumatera Selatan
@@ -111,7 +99,6 @@
             Memiliki kambing dengan kualitas yang baik dirawat dengan
             <i class="fas fa-heart"></i> oleh tenaga professional.
           </p>
-          <p class="text-start mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="section-image">
           <img src="./img/logo.png" alt="" />
@@ -122,13 +109,14 @@
 
     <!-- ? Produk Section -->
     <section id="produk">
-      <div class="container h-100">
+      <div class="showcase">
         <h2>Produk</h2>
-        <p class="lead text-center">
-          Kami menjual <strong>daging mentah</strong> maupun
-          <strong>olahan</strong> dari Kambing.
+        <h3>Galeri</h3>
+        <p>
+          Liat dulu yuk gambarnya! Biar kamu tau gimana bagusnya
+          <strong>Hendra Herman Aqiqah & Qurban</strong>.
         </p>
-        <div class="row text-center align-items-center produk-grid">
+        <div class="row text-center align-items-center gy-2 mb-3">
           <div class="col-md">
             <img
               src="https://source.unsplash.com/1600x900/?cattle,goat"
@@ -144,14 +132,12 @@
             />
           </div>
         </div>
-        <h2>Daftar Harga</h2>
-        <p class="lead">Liat dulu yuk daftar harganya!</p>
-        <p class="lead">
-          Murah-murah kan. Kualitas dagingnya bagus lagi. Ga bakalan rugi deh
-          kalo beli disini
+        <h3>Daftar Harga</h3>
+        <p>
+          Liat dulu yuk daftar harganya! Biar kamu tau gimana murahnya
+          <strong>Hendra Herman Aqiqah & Qurban</strong>.
         </p>
-
-        <div class="row">
+        <div class="row gy-2">
           <div class="col-md">
             <div class="card">
               <div class="card-body">
@@ -160,8 +146,8 @@
                   <strong>Rp. 1.900.000</strong>
                 </h6>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  <strong>Beratnya 18 - 20 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan budget kecil.
                 </p>
               </div>
             </div>
@@ -170,12 +156,13 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Paket Standard</h5>
-                <h6 class="card-subtitle mb-2 text-muted">
+                <h6 class="card-subtitle mb-2">
                   <strong>Rp. 2.250.000</strong>
                 </h6>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  <strong>Beratnya 21 - 25 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan budget standard
+                  dapat dagingnya lebih banyak.
                 </p>
               </div>
             </div>
@@ -188,8 +175,8 @@
                   <strong>Rp. 2.750.000</strong>
                 </h6>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  <strong>Beratnya 26 - 30 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan daging yang banyak.
                 </p>
               </div>
             </div>
@@ -202,8 +189,9 @@
                   <strong>Rp.3.300.000</strong>
                 </h6>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  <strong>Beratnya 31 - 35 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan daging yang banyak
+                  banget.
                 </p>
               </div>
             </div>
@@ -216,100 +204,20 @@
                   <strong>Rp. 3.750.000</strong>
                 </h6>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  <strong>Beratnya 36 - 40 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan daging yang banyak.
                 </p>
               </div>
             </div>
           </div>
+          <p>
+            Murah-murah kan, masih bisa nego kok. Kualitas dagingnya bagus lagi. Ga bakalan rugi deh
+            kalo beli disini. <br><strong>Yuk segera hubungi kami!</strong>
+          </p>
         </div>
       </div>
     </section>
     <!-- ? End Produk Section -->
-
-    <!-- ? Testimoni Section -->
-    <section id="testimoni">
-      <div class="container h-100">
-        <h2>Kata Pelanggan</h2>
-        <p class="lead">
-          Ayo dengarkan kata pelanggan sebelumnya. Mana tau bisa nambah
-          kepercayaan kamu untuk beli kambing disini?
-          <i class="fas fa-smile"></i>
-        </p>
-        <div class="row mx-auto justify-content-center align-items-center">
-          <div class="col-md-12 mx-auto col-lg-3 text-center">
-            <div class="card mx-auto">
-              <div class="card-body">
-                <img
-                  src="./img/boby.jpeg"
-                  width="100px"
-                  class="mb-3"
-                  style="border-radius: 100%"
-                  alt=""
-                />
-                <h5 class="card-title mb-3">Boby Darmawansyah</h5>
-                <p class="card-text" style="text-align: justify">
-                  Pelayanannya sopan dan ramah. Daging kambingnya kualitas baik.
-                  Pokoknya the best lah
-                </p>
-                <div class="text-warning">
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="fas fa-star"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 mx-auto col-lg-3 text-center">
-            <div class="card mx-auto">
-              <div class="card-body">
-                <img
-                  src="./img/boby.jpeg"
-                  width="100px"
-                  class="mb-3"
-                  style="border-radius: 100%"
-                  alt=""
-                />
-                <h5 class="card-title mb-3">Boby Darmawansyah</h5>
-                <p class="card-text" style="text-align: justify">
-                  Pelayanannya sopan dan ramah. Daging kambingnya kualitas baik.
-                  Pokoknya the best lah
-                </p>
-                <div class="text-warning">
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="fas fa-star"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 mx-auto col-lg-3 text-center">
-            <div class="card mx-auto">
-              <div class="card-body">
-                <img
-                  src="./img/boby.jpeg"
-                  width="100px"
-                  class="mb-3"
-                  style="border-radius: 100%"
-                  alt=""
-                />
-                <h5 class="card-title mb-3">Boby Darmawansyah</h5>
-                <p class="card-text" style="text-align: justify">
-                  Pelayanannya sopan dan ramah. Daging kambingnya kualitas baik.
-                  Pokoknya the best lah
-                </p>
-                <div class="text-warning">
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="fas fa-star"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ? End Testimoni Section -->
 
     <!-- ? Bootstrap 5 Js -->
     <script
