change landing height; change background product card

--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,7 @@
           <strong>Hendra Herman Aqiqah & Qurban</strong>.
         </p>
         <div class="row text-center align-items-center gy-2 mb-3">
+          <!-- TODO Ganti galeri image menjadi carousel -->
           <div class="col-md">
             <img
               src="https://source.unsplash.com/1600x900/?cattle,goat"
