add sticky media social

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,22 @@
 </head>
 
 <body>
+  <div class="fixed-whatsapp">
+    <a href="" class="btn-whatsapp">
+      <img src="./img/whatsapp.png" alt="">
+    </a>
+  </div>
+  <div class="fixed-instagram">
+    <a href="" class="btn btn-instagram">
+      <img src="./img/instagram.png" alt="">
+    </a>
+  </div>
+  <div class="fixed-facebook">
+    <a href="" class="btn btn-facebook">
+      <img src="./img/facebook.png" alt="">
+    </a>
+  </div>
+
   <!-- ? Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container d-flex">
@@ -310,8 +326,8 @@
               <img src="./img/messy.jpeg" alt="...">
               <div class="card-body">
                 <p class="testimoni-title">Messy Triandani</h5>
-                <p class="testimoni-text">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. At laborum odio
-                  deleniti, in sit ab recusandae quae eos ipsam fugit."</p>
+                <p class="testimoni-text">"Assalammualaikum, terima kasih mas Hendra kambingnya sudah saya terima dalam
+                  keadaan sehat dan bagus. Harganya juga terjangkau. "</p>
                 <div class="rating text-warning">
                   <i class="fas fa-star fa-2x"></i>
                   <i class="fas fa-star fa-2x"></i>
@@ -327,8 +343,7 @@
               <img src="./img/junia.jpeg" alt="...">
               <div class="card-body">
                 <p class="testimoni-title">Junia Erlina</h5>
-                <p class="testimoni-text">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. At laborum odio
-                  deleniti, in sit ab recusandae quae eos ipsam fugit."</p>
+                <p class="testimoni-text">"Jazakallahu Khairan Mas Hendra, Kambing yang dipesan untuk acara aqiqah kemarin kualitasnya sangat bagus."</p>
                 <div class="rating text-warning">
                   <i class="fas fa-star fa-2x"></i>
                   <i class="fas fa-star fa-2x"></i>
