add ref to fixed link

--- a/public/index.html
+++ b/public/index.html
@@ -24,20 +24,22 @@
 </head>
 
 <body>
-  <div class="fixed-whatsapp">
-    <a href="" class="btn-whatsapp">
-      <img src="./img/whatsapp.png" alt="">
-    </a>
-  </div>
-  <div class="fixed-instagram">
-    <a href="" class="btn btn-instagram">
-      <img src="./img/instagram.png" alt="">
-    </a>
-  </div>
-  <div class="fixed-facebook">
-    <a href="" class="btn btn-facebook">
-      <img src="./img/facebook.png" alt="">
-    </a>
+  <div id="fixed-button-section">
+    <div class="fixed-whatsapp">
+      <a href="https://api.whatsapp.com/send?phone=081279842154" target="__blank" rel="noopener noreferrer" class="btn-whatsapp">
+        <img src="./img/whatsapp.png" alt="">
+      </a>
+    </div>
+    <div class="fixed-instagram">
+      <a href="https://www.instagram.com/hh_aqiqahqurban/" target="__blank" rel="noopener noreferrer" class="btn btn-instagram">
+        <img src="./img/instagram.png" alt="">
+      </a>
+    </div>
+    <div class="fixed-facebook">
+      <a href="" class="btn btn-facebook">
+        <img src="./img/facebook.png" alt="">
+      </a>
+    </div>
   </div>
 
   <!-- ? Navbar -->
@@ -343,7 +345,8 @@
               <img src="./img/junia.jpeg" alt="...">
               <div class="card-body">
                 <p class="testimoni-title">Junia Erlina</h5>
-                <p class="testimoni-text">"Jazakallahu Khairan Mas Hendra, Kambing yang dipesan untuk acara aqiqah kemarin kualitasnya sangat bagus."</p>
+                <p class="testimoni-text">"Jazakallahu Khairan Mas Hendra, Kambing yang dipesan untuk acara aqiqah
+                  kemarin kualitasnya sangat bagus."</p>
                 <div class="rating text-warning">
                   <i class="fas fa-star fa-2x"></i>
                   <i class="fas fa-star fa-2x"></i>
