add new price list

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,14 @@
 <body>
   <div id="fixed-button-section">
     <div class="fixed-whatsapp">
-      <a href="https://api.whatsapp.com/send?phone=081279842154" target="__blank" rel="noopener noreferrer" class="btn-whatsapp">
+      <a href="https://api.whatsapp.com/send?phone=081279842154" target="__blank" rel="noopener noreferrer"
+        class="btn-whatsapp">
         <img src="./img/whatsapp.png" alt="">
       </a>
     </div>
     <div class="fixed-instagram">
-      <a href="https://www.instagram.com/hh_aqiqahqurban/" target="__blank" rel="noopener noreferrer" class="btn btn-instagram">
+      <a href="https://www.instagram.com/hh_aqiqahqurban/" target="__blank" rel="noopener noreferrer"
+        class="btn btn-instagram">
         <img src="./img/instagram.png" alt="">
       </a>
     </div>
@@ -185,113 +187,231 @@
             </div>
           </div>
         </div>
-        <div class="daftar-harga">
-          <h3>Daftar Harga</h3>
-          <p>
-            Liat dulu yuk daftar harganya! Biar kamu tau gimana murahnya
-            <strong>Hendra Herman Aqiqah & Qurban</strong>.
-          </p>
-          <div class="row gy-2">
-            <div class="col-md">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Paket Hemat</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">
-                    <strong>Rp. 1.900.000</strong>
-                  </h6>
-                  <p class="card-text">
-                    <strong>Beratnya 18 - 20 Kg</strong>. <br />Cocok banget nih
-                    buat kamu yang ingin aqiqah/qurban dengan budget kecil.
-                  </p>
-                </div>
+      </div>
+      <div class="daftar-harga">
+        <h3>Daftar Harga</h3>
+        <p>
+          Liat dulu yuk daftar harganya! Biar kamu tau gimana murahnya
+          <strong>Hendra Herman Aqiqah & Qurban</strong>.
+        </p>
+        <h4>Paket Qurban</h4>
+        <div class="row gy-2 paket-qurban align-items-stretch">
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Hemat</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp. 1.900.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>Beratnya 18 - 20 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan budget kecil.
+                </p>
               </div>
             </div>
-            <div class="col-md">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Paket Standard</h5>
-                  <h6 class="card-subtitle mb-2">
-                    <strong>Rp. 2.250.000</strong>
-                  </h6>
-                  <p class="card-text">
-                    <strong>Beratnya 21 - 25 Kg</strong>. <br />Cocok banget nih
-                    buat kamu yang ingin aqiqah/qurban dengan budget standard
-                    dapat dagingnya lebih banyak.
-                  </p>
-                </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Standard</h5>
+                <h6 class="card-subtitle mb-2">
+                  <strong>Rp. 2.250.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>Beratnya 21 - 25 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan budget standard
+                  dapat dagingnya lebih banyak.
+                </p>
               </div>
             </div>
-            <div class="col-md">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Paket Premium</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">
-                    <strong>Rp. 2.750.000</strong>
-                  </h6>
-                  <p class="card-text">
-                    <strong>Beratnya 26 - 30 Kg</strong>. <br />Cocok banget nih
-                    buat kamu yang ingin aqiqah/qurban dengan daging yang banyak.
-                  </p>
-                </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Premium</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp. 2.750.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>Beratnya 26 - 30 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan daging yang banyak.
+                </p>
               </div>
             </div>
-            <div class="col-md">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Paket Eksekutif</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">
-                    <strong>Rp.3.300.000</strong>
-                  </h6>
-                  <p class="card-text">
-                    <strong>Beratnya 31 - 35 Kg</strong>. <br />Cocok banget nih
-                    buat kamu yang ingin aqiqah/qurban dengan daging yang banyak
-                    banget.
-                  </p>
-                </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Eksekutif</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp.3.300.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>Beratnya 31 - 35 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan daging yang banyak
+                  banget.
+                </p>
               </div>
             </div>
-            <div class="col-md">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Paket Highclass</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">
-                    <strong>Rp. 3.750.000</strong>
-                  </h6>
-                  <p class="card-text">
-                    <strong>Beratnya 36 - 40 Kg</strong>. <br />Cocok banget nih
-                    buat kamu yang ingin aqiqah/qurban dengan daging yang banyak.
-                  </p>
-                </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Highclass</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp. 3.750.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>Beratnya 36 - 40 Kg</strong>. <br />Cocok banget nih
+                  buat kamu yang ingin aqiqah/qurban dengan daging yang banyak.
+                </p>
               </div>
             </div>
-            <p>
-              Murah-murah kan, masih bisa nego kok. Kualitas dagingnya bagus lagi. Ga bakalan rugi deh
-              kalo beli disini. <br><strong>Yuk segera hubungi kami!</strong>
-            </p>
           </div>
         </div>
-        <div class="mengapa-memilih-kami">
-          <h3>Mengapa Memilih Kami ?</h3>
-          <div class="items">
-            <div class="item">
-              <i class="fas fa-handshake fa-2x"></i>
-              <p class="title-item">Terpercaya</p>
-              <p class="title-desc">Sudah beroperasi selama 25 tahun dengan 500+ pelanggan/tahun</p>
-            </div>
-            <div class="item">
-              <i class="fas fa-truck fa-2x"></i>
-              <p class="title-item">Gratis Ongkir</p>
-              <p class="title-desc">Bisa diantar ke tempat langsung, khusus nya wilayah kota palembang dan sekitarnya
-              </p>
-            </div>
-            <div class="item">
-              <i class="fas fa-thumbs-up fa-2x"></i>
-              <p class="title-item">Berkualitas</p>
-              <p class="title-desc">Kambing qurban yang kami jual hanyalah yang sehat dan berkualitas</p>
+        <h4 class="mt-3">Paket Aqiqah</h4>
+        <div class="row gy-2 paket-qurban align-items-stretch">
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Ekonomi A</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp. 1.000.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>Beratnya &#177; 6 Kg</strong>. <br /> Daging dari kambing dengan berat &#177; 14 kg. Hanya
+                  daging mentah/dipotong saja.
+                </p>
+              </div>
             </div>
           </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Ekonomi B</h5>
+                <h6 class="card-subtitle mb-2">
+                  <strong>Rp. 1.300.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>Beratnya &#177; 6 Kg</strong>. <br /> Daging dari kambing dengan berat &#177; 14 kg. Kambing
+                  dimasak dengan pilihan: Kare, Gulai, Malbi, Tongseng, atau Sate
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Ekonomi C</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp. 1.800.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>60 Nasi Kotak Sterofoam</strong>. <br /> Terdiri dari: Nasi Putih, Lauk Kambing, Sayur Buah, Kemplang, dan Sambal
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Ekonomi D</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp.2.050.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>60 Nasi Kotak Sterofoam</strong>. <br /> Terdiri dari: Nasi Putih, Lauk Kambing, Sayur Buah, Kemplang, Sambal, dan <strong>Telur</strong> 
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Ekonomi E</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp. 2.350.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>60 Nasi Kotak Sterofoam</strong>. <br /> Terdiri dari: Nasi Putih, Lauk Kambing, Sayur Buah, Kemplang, Sambal, dan <strong>Ayam</strong> 
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Premium A</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp. 1.200.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>Beratnya &#177; 7 Kg</strong>. <br /> Daging dari kambing dengan berat &#177; 16 kg. Hanya
+                  daging mentah/dipotong saja.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Premium B</h5>
+                <h6 class="card-subtitle mb-2">
+                  <strong>Rp. 1.300.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>Beratnya &#177; 7 Kg</strong>. <br /> Daging dari kambing dengan berat &#177; 16 kg. Kambing
+                  dimasak dengan pilihan: Kare, Gulai, Malbi, Tongseng, atau Sate
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Premium C</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp. 1.800.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>60 Nasi Kotak Dus</strong>. <br /> Terdiri dari: Nasi Minyak, Lauk Kambing, Sayur Buah, Kemplang, dan Sambal
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Premium D</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp.2.050.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>60 Nasi Kotak Dus</strong>. <br /> Terdiri dari: Nasi Minyak, Lauk Kambing, Sayur Buah, Kemplang, Sambal, dan <strong>Telur</strong> 
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Premium E</h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <strong>Rp. 2.350.000</strong>
+                </h6>
+                <p class="card-text">
+                  <strong>60 Nasi Kotak Dus</strong>. <br /> Terdiri dari: Nasi Minyak, Lauk Kambing, Sayur Buah, Kemplang, Sambal, dan <strong>Ayam</strong> 
+                </p>
+              </div>
+            </div>
+          </div>
+          <p class="mt-4">
+            Murah-murah kan, masih bisa nego kok. Kualitas dagingnya bagus lagi. Ga bakalan rugi deh
+            kalo beli disini. <br><strong>Yuk segera hubungi kami!</strong>
+          </p>
         </div>
       </div>
+    </div>
   </section>
   <!-- ? End Produk Section -->
 
