--- a/public/index.html
+++ b/public/index.html
@@ -195,8 +195,8 @@
           <strong>Hendra Herman Aqiqah & Qurban</strong>.
         </p>
         <h4>Paket Qurban</h4>
-        <div class="row gy-2 paket-qurban align-items-stretch">
-          <div class="col-md">
+        <div class="row gy-2 paket-qurban">
+          <div class="col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Hemat</h5>
@@ -210,7 +210,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Standard</h5>
@@ -225,7 +225,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium</h5>
@@ -239,7 +239,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Eksekutif</h5>
@@ -254,7 +254,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Highclass</h5>
@@ -271,7 +271,7 @@
         </div>
         <h4 class="mt-3">Paket Aqiqah</h4>
         <div class="row gy-2 paket-qurban align-items-stretch">
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi A</h5>
@@ -285,7 +285,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi B</h5>
@@ -299,7 +299,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi C</h5>
@@ -312,7 +312,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi D</h5>
@@ -325,7 +325,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi E</h5>
@@ -338,7 +338,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium A</h5>
@@ -352,7 +352,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium B</h5>
@@ -366,7 +366,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium C</h5>
@@ -379,7 +379,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium D</h5>
@@ -392,7 +392,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-xs-12 col-md-6">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium E</h5>
