--- a/public/index.html
+++ b/public/index.html
@@ -46,14 +46,15 @@
 
   <!-- ? Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container d-flex">
+    <div class="container">
       <img src="./img/logo.png" alt="" />
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu"
-        aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbar-menu">
-        <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        </ul>
+        <ul class="navbar-nav ml-5 mb-2 mb-lg-0 justify-content-center">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Beranda</a>
           </li>
@@ -94,20 +95,22 @@
 
   <!-- ? Tentang Kami Section -->
   <section id="tentang-kami">
-    <div class="showcase">
+    <div class="content">
       <h2>Tentang Kami</h2>
-      <div class="section-text">
-        <h3 class="text-center">"The Best Goat Seller in Palembang City"</h3>
-        <p class="lead">
-          Sudah menjadi kepercayaan konsumen
-          <strong>sejak tahun 1996</strong>, berlokasi di Sumatera Selatan
-          tepatnya di <strong>Palembang, Kec. Sukarami Kel.Sukajaya</strong>.
-          Memiliki kambing dengan kualitas yang baik dirawat dengan
-          <i class="fas fa-heart"></i> oleh tenaga professional.
-        </p>
-      </div>
-      <div class="section-image">
-        <img src="./img/logo.png" alt="" />
+      <div class="showcase">
+        <div class="section-text">
+          <h3 class="text-center">"The Best Goat Seller in Palembang City"</h3>
+          <p class="lead">
+            Sudah menjadi kepercayaan konsumen
+            <strong>sejak tahun 1996</strong>, berlokasi di Sumatera Selatan
+            tepatnya di <strong>Palembang, Kec. Sukarami Kel.Sukajaya</strong>.
+            Memiliki kambing dengan kualitas yang baik dirawat dengan
+            <i class="fas fa-heart"></i> oleh tenaga professional.
+          </p>
+        </div>
+        <div class="section-image">
+          <img src="./img/logo.png" alt="" />
+        </div>
       </div>
     </div>
   </section>
@@ -195,8 +198,8 @@
           <strong>Hendra Herman Aqiqah & Qurban</strong>.
         </p>
         <h4>Paket Qurban</h4>
-        <div class="row gy-2 paket-qurban">
-          <div class="col-md-6">
+        <div class="row gy-3 paket-qurban">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Hemat</h5>
@@ -210,7 +213,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Standard</h5>
@@ -225,7 +228,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium</h5>
@@ -239,7 +242,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Eksekutif</h5>
@@ -254,7 +257,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Highclass</h5>
@@ -270,8 +273,8 @@
           </div>
         </div>
         <h4 class="mt-3">Paket Aqiqah</h4>
-        <div class="row gy-2 paket-qurban align-items-stretch">
-          <div class="col-xs-12 col-md-6">
+        <div class="row gy-3 paket-qurban align-items-stretch">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi A</h5>
@@ -285,7 +288,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi B</h5>
@@ -299,7 +302,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi C</h5>
@@ -312,7 +315,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi D</h5>
@@ -325,7 +328,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Ekonomi E</h5>
@@ -338,7 +341,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium A</h5>
@@ -352,7 +355,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium B</h5>
@@ -366,7 +369,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium C</h5>
@@ -379,7 +382,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium D</h5>
@@ -392,7 +395,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Premium E</h5>
@@ -411,6 +414,27 @@
           </p>
         </div>
       </div>
+      <div class="mengapa-memilih-kami">
+        <h3>Mengapa Memilih Kami ?</h3>
+        <div class="items">
+          <div class="item">
+            <i class="fas fa-handshake fa-2x"></i>
+            <p class="title-item">Terpercaya</p>
+            <p class="title-desc">Sudah beroperasi selama 25 tahun dengan 500+ pelanggan/tahun</p>
+          </div>
+          <div class="item">
+            <i class="fas fa-truck fa-2x"></i>
+            <p class="title-item">Gratis Ongkir</p>
+            <p class="title-desc">Bisa diantar ke tempat langsung, khusus nya wilayah kota palembang dan sekitarnya
+            </p>
+          </div>
+          <div class="item">
+            <i class="fas fa-thumbs-up fa-2x"></i>
+            <p class="title-item">Berkualitas</p>
+            <p class="title-desc">Kambing qurban yang kami jual hanyalah yang sehat dan berkualitas</p>
+          </div>
+        </div>
+
     </div>
   </section>
   <!-- ? End Produk Section -->
