fixing url to facebook

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       </a>
     </div>
     <div class="fixed-facebook">
-      <a href="" class="btn btn-facebook">
+      <a href="https://web.facebook.com/profile.php?id=100070099414560" target="__blank" rel="noopener noreferrer" class="btn btn-facebook">
         <img src="./img/facebook.png" alt="">
       </a>
     </div>
