testimoni and media sosial agar supaya data dinamis

--- a/design/index.html
+++ b/design/index.html
@@ -26,7 +26,7 @@
 <body>
   <div id="fixed-button-section">
     <div class="fixed-whatsapp">
-      <a href="https://api.whatsapp.com/send?phone=081279842154" target="__blank" rel="noopener noreferrer"
+      <a href="https://api.whatsapp.com/send?phone=+6281279842154" target="__blank" rel="noopener noreferrer"
         class="btn-whatsapp">
         <img src="./img/whatsapp.png" alt="">
       </a>
